@@ -72,7 +72,7 @@ using namespace NxWM;
 
 static const uint32_t g_stopLut[BITMAP_NLUTCODES] =
 {
-  CONFIG_NXWM_DEFAULT_BACKGROUNDCOLOR,                                             /* Code 0 */
+  CONFIG_NXTK_BORDERCOLOR1,                                                        /* Code 0 */
   0xdbdbdb, 0xdbb6db, 0xdbb6b6, 0xdb9292, 0xdb926d, 0xdb6d6d, 0xb66d6d, 0xb64949,  /* Codes 1-8 */
   0xb62449, 0xdb246d, 0xdb4949, 0xff496d, 0xffb6b6, 0xffdbff, 0xffdbdb, 0xff9292,  /* Codes 9-16 */
   0xff6d6d, 0xdb6d49, 0xff2449, 0xff246d, 0xdb2449, 0xdbdbb6, 0xff4949, 0xff2424,  /* Codes 17-24 */
@@ -90,7 +90,7 @@ static const uint32_t g_stopLut[BITMAP_NLUTCODES] =
 
 static const uint16_t g_stopLut[BITMAP_NLUTCODES] =
 {
-  CONFIG_NXWM_DEFAULT_BACKGROUNDCOLOR,                                             /* Code 0 */
+  CONFIG_NXTK_BORDERCOLOR1,                                                        /* Code 0 */
   0xdedb, 0xddbb, 0xddb6, 0xdc92, 0xdc8d, 0xdb6d, 0xb36d, 0xb249, 0xb129, 0xd92d,  /* Codes 1-10 */
   0xda49, 0xfa4d, 0xfdb6, 0xfedf, 0xfedb, 0xfc92, 0xfb6d, 0xdb69, 0xf929, 0xf92d,  /* Codes 11-20 */
   0xd929, 0xded6, 0xfa49, 0xf924, 0xfffb, 0xddb2, 0xd924, 0xfa44, 0xfdbb, 0xfed6,  /* Codes 21-30 */
@@ -114,7 +114,7 @@ static const uint16_t g_stopLut[BITMAP_NLUTCODES] =
 
 static const uint8_t g_stopLut[BITMAP_NLUTCODES] =
 {
-  CONFIG_NXWM_DEFAULT_BACKGROUNDCOLOR,                                             /* Code 0 */
+  CONFIG_NXTK_BORDERCOLOR1,                                                        /* Code 0 */
   0xdb, 0xc5, 0xc1, 0xa7, 0xa3, 0x8d, 0x82, 0x69, 0x53, 0x63, 0x74, 0x83, 0xcb,    /* Codes 1-13 */
   0xe9, 0xe5, 0xb2, 0x98, 0x89, 0x69, 0x6d, 0x5e, 0xd6, 0x7f, 0x65, 0xfa, 0xbc,    /* Codes 14-26 */
   0x5a, 0x7b, 0xd0, 0xe1, 0x94, 0xc7, 0x70, 0x65, 0xd2, 0x9c, 0x4f, 0x78, 0x98,    /* Codes 27-39 */
@@ -129,7 +129,7 @@ static const uint8_t g_stopLut[BITMAP_NLUTCODES] =
 
 static const nxgl_mxpixel_t g_stopLut[BITMAP_NLUTCODES] =
 {
-  CONFIG_NXWM_DEFAULT_BACKGROUNDCOLOR,                                             /* Code 0 */
+  CONFIG_NXTK_BORDERCOLOR1,                                                        /* Code 0 */
   0xdb, 0xd7, 0xd6, 0xd2, 0xd1, 0xcd, 0xad, 0xa9, 0xa5, 0xc5, 0xc9, 0xe9, 0xf6,    /* Codes 1-13 */
   0xfb, 0xfb, 0xf2, 0xed, 0xcd, 0xe5, 0xe5, 0xc5, 0xda, 0xe9, 0xe4, 0xff, 0xd6,    /* Codes 14-26 */
   0xc4, 0xe8, 0xf7, 0xfa, 0xed, 0xf6, 0xc8, 0xa8, 0xda, 0xb2, 0xa4, 0xc9, 0xb1,    /* Codes 27-39 */
